# time-tools

./: CMakeLists.txt  README.md
include/: assert.hpp  cmp.hpp  epoch.hpp
include/date/: constants.hpp  conversions.hpp  date.hpp  epoch.hpp  errors.hpp  exceptions.hpp  prelude.hpp
include/date/gregorian/: algorithms.hpp  civil.hpp  constants.hpp  conversions.hpp  errors.hpp  exceptions.hpp  gregorian.hpp  predicates.hpp  validation.hpp
include/date/ops/: ops.hpp  ord.hpp  unary.hpp
include/gregorian/: civil.hpp
include/timespans/: constants.hpp  timespans.hpp
include/tts/: assert.hpp  epoch.hpp  timetools.hpp  types.hpp  units.hpp
include/tts/businessdays/: businessdays.hpp  constants.hpp  hash.hpp
include/tts/calendar/: businessday.hpp  calendar.hpp  weekend.hpp
include/tts/date/: constants.hpp  conversions.hpp  date.hpp  exceptions.hpp  hash.hpp  predicates.hpp  prelude.hpp  validation.hpp
include/tts/gregorian/: algorithms.hpp  civil.hpp  constants.hpp  conversions.hpp  exceptions.hpp  gregorian.hpp  predicates.hpp  validation.hpp
include/tts/holidays/: README.md  algorithms.hpp  errors.hpp  exceptions.hpp  holidays.hpp  prelude.hpp
include/tts/months/: hash.hpp  months.hpp  prelude.hpp
include/tts/regex/: errors.hpp  exceptions.hpp  prelude.hpp  validation.hpp
include/tts/spans/: prelude.hpp
include/tts/tenors/: errors.hpp  exceptions.hpp  hash.hpp  regex.hpp  tenors.hpp  units.hpp
include/tts/timespans/: constants.hpp  hash.hpp  prelude.hpp  timespans.hpp
tests/: CMakeLists.txt
tests/date/: CMakeLists.txt
(+66 files in other folders)
